fix content spacing

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -37,11 +37,11 @@ body:has(.grid-container--home) {
 		grid-column: 3;
 	}
 
-	.grid-container--home {
+	.grid-container.grid-container--home {
 		/* TODO: too much bottom padding, not enough top padding */
-		padding-bottom: max(6rem, 15vh);
-		align-items: end;
-		/* TODO: article and explore button need wider horiz gap btwn them */
+		padding-bottom: max(4rem, 10vh);
+		align-content: space-between;
+		--container-gap: 15vw;
 	}
 }
 
